adding some feautures